# QPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseChannel.h  CMakeLists.txt  QPlayer.cpp  QPlayer.h  VideoChannel.cpp  VideoChannel.h  audio_channel.cpp  audio_channel.h  base_channel.h  jni_helper.h  log4c.h  native-lib.cpp  q_player.cpp  q_player.h  safe_queue.h  util.h  video_channel.cpp  video_channel.h
app/src/main/cpp/player/: log4c.h  util.h
app/src/main/java/com/leo/qplayer/: MainActivity.kt  QPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
qplayer/: build.gradle  gradle.properties
qplayer/src/main/: AndroidManifest.xml
qplayer/src/main/cpp/: CMakeLists.txt  audio_channel.cpp  base_channel.h  jni_helper.cpp  log4c.h  native-lib.cpp  nativelib.cpp  q_player.cpp  q_player.h  safe_queue.h  video_channel.cpp  video_channel.h
qplayer/src/main/java/com/nuonuo/nativelib/: NativeLib.kt
qplayer/src/main/java/com/nuonuo/qplayer/: FFMPEG.kt  FFMPGE.kt  PlayerListener.kt  PlayerListenerAdapter.kt  QPlayer.kt
script/: publication.gradle
